--- a/CalculatorOnStart/MainWindow.xaml
+++ b/CalculatorOnStart/MainWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculatorOnStart"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="CustomCalculator"
+        ResizeMode="CanMinimize" Height="450" Width="280">
     <Grid>
-        
+        <TextBlock Text="Implement calculator here"
+                   VerticalAlignment="Top" HorizontalAlignment="Left"
+                   Margin="10"/>
+        <Button Content="Set startup" Click="SetStartupOnLogin"
+                VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                Margin="10"/>
     </Grid>
 </Window>
